Made tags fix a site wide fix (and not just homepage) and removed uneeded whitespace

--- a/ckan/public/base/less/layout.less
+++ b/ckan/public/base/less/layout.less
@@ -149,12 +149,12 @@
   margin-right: 15px;
 }
 
-.ie7 .hero .tags {
+.ie7 .tags {
   .tag-list {
-    display: inline;
+    .clearfix;
     li {
-      float: left;
       display: block;
+      float: left;
     }
   }
   h3 {
